# tinyrenderer

./: CMakeLists.txt
include/: geometry.h  our_gl.h
src/: main.cpp  model.cpp  our_gl.cpp
